# app/Components/MealPlanner/Infrastructure/Http/Request/Plan/UpdatePlanRequest.php
@@ -1,0 +1,8 @@
+<?php
+
+namespace App\Components\MealPlanner\Infrastructure\Http\Request\Plan;
+
+class UpdatePlanRequest extends CreatePlanRequest
+{
+
+}
